src/objects/ACET_ReferralDisplayMessages__mdt.object
<CustomObject>
    <description>The Purpose of this Object is used to store the Referral Display Messages.</description>
    <fields>
        <fullName>End_Date_Notes__c</fullName>
        <label>End Date Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Is used to capture End Date</description>
        <label>End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Is used to display error message for No of Visits Field.</description>
        <label>Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPcpOnFile_Exchange_Policy__c</fullName>
        <description>Is used to Carry if PCP on FIle is Present or Exchange Policy is Present for Source Codes</description>
        <label>IsPcpOnFile / Exchange Policy ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Visits_Notes__c</fullName>
        <description>Is Used for No of Visits Note</description>
        <label>No of Visits Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Visits__c</fullName>
        <description>Is Used for Capturing No of Visits</description>
        <label>No of Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Reason_For_Referral__c</fullName>
        <description>Used to Contain selected reason for referral</description>
        <label>Selected Reason For Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ACET_ReferralDisplayMessages</label>
    <pluralLabel>ACET_ReferralDisplayMessages</pluralLabel>
</CustomObject>